# IntegrateImage

./: CMakeLists.txt  integral_image.cpp  integral_image.h  main.cpp
tests/: CMakeLists.txt  tests.cpp
